--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-# Датасет не загружаю
+# Датасет не загружать
 /data/X_nup.xlsx
 /data/X_bp.xlsx
 /data/data_merged.xlsx
 /data/data_cleaned.xlsx
 
-# Вспомогательные файлы юпитер ноутбука не нужно загружаю
+# Вспомогательные файлы ноутбука не загружать
 /notebooks/.ipynb_checkpoints/
+
+# Модели тоже не загружать
+/models/*
+!/models/readme.txt
